# VSCodeTut

./: calculator.py  pyproject.toml  requirements.txt
PyCalculator/: calculator.py
PyCalculator/static/: app.js  index.html  styles.css
tests/: test_calculator.py
